# design_patterns

./: .gitignore  README.md
.github/workflows/: basic_workflow.yml
00_adapter/: README.md  adaptee_dog.hpp  adapter_dog.hpp  adapter_pattern  client_main.cpp  target_animal.hpp
01_bridge/: abstract_hierarchy.hpp  client_main.cpp  implementation_hierarchy.hpp
02_proxy/: client_main.cpp
03_builder/: client_main.cpp
04_factory_method/: client_main.cpp
04_factory_method/source/: concrete_creator.cpp  concrete_product.cpp  creator.cpp
05_flyweight/: CMakeLists.txt  client_main.cpp
05_flyweight/include/05_flyweight/: flyweight_factory.hpp  flyweight_shared.hpp  flyweight_unshared.hpp
05_flyweight/source/: flyweight_factory.cpp  flyweight_shared.cpp  flyweight_unshared.cpp
06_mediator/: CMakeLists.txt  client_main.cpp
07_memento/: CMakeLists.txt  README.md  client_main.cpp
08_prototype/: CMakeLists.txt  client_main.cpp
09_singleton/: CMakeLists.txt  client_main.cpp
10_facade/: client_main.cpp
11_iterator/: CMakeLists.txt  README.md  client_main.cpp
12_observer/: client_main.cpp
13_state/: client_main.cpp
14_decorator/: client_main.cpp
15_strategy/: client_main.cpp
16_template_method/: CMakeLists.txt
17_visitor/: CMakeLists.txt  README.md  client_main.cpp
18_abstract_factory/: client_main.cpp
19_composite/: client_main.cpp
20_chain_of_responsibility/: README.md  client_main.cpp
21_command/: README.md  client_main.cpp
22_interpreter/: CMakeLists.txt  README.md  client_main.cpp
GoF/02_proxy/: CMakeLists.txt
GoF/03_builder/: CMakeLists.txt
GoF/10_facade/: client_main.cpp
GoF/12_observer/: README.md
GoF/13_state/: client_main.cpp
GoF/14_decorator/: CMakeLists.txt
GoF/15_strategy/: client_main.cpp
algorithms/: 01_union_find.cpp  02_general.cpp  03_notations.cpp  data_structures.cpp
gof/04_factory_method/: CMakeLists.txt  client_main.cpp
gof/04_factory_method/include/04_factory_method/: concrete_product.hpp  creator.hpp
gof/04_factory_method/source/: concrete_creator.cpp  concrete_product.cpp
gof/10_facade/: CMakeLists.txt  README.md
patterns/GoF/creational/02_factory_method/: CMakeLists.txt  client_main.cpp
patterns/GoF/creational/02_factory_method/include/02_factory_method/: concrete_creator.hpp
patterns/GoF/creational/02_factory_method/source/: concrete_creator.cpp  concrete_product.cpp  creator.cpp
(+130 files in other folders)
